--- a/cal-hacks/assets/style.scss
+++ b/cal-hacks/assets/style.scss
@@ -240,6 +240,16 @@ body {
         display: none;
       }
 
+      .fellowship {
+        width: 80px;
+        position: absolute;
+        right: 120px;
+        bottom: 74px;
+        @media (max-width: 820px) {
+          display: none;
+        }
+      }
+
       .conduct {
         display: inline-block;
         font-size: 16px;
@@ -297,6 +307,14 @@ body {
       }
     }
 
+    .extra-small-buffer {
+      width: 100%;
+      height: 5px;
+      background: transparent;
+      position: relative;
+      @media (max-width: 820px) { display: none; }
+    }
+
     .small-buffer {
       width: 100%;
       height: 60px;
@@ -324,6 +342,7 @@ body {
       .main { margin: 0; }
 
       .sub {
+        font-size: 24px;
         margin: 10px 0 0 40px;
         font-weight: 600;
         padding: 0;
@@ -376,8 +395,18 @@ body {
     }
 
     h2 {
+      font-family: Nunito Sans;
+      font-size: 28px;
+      font-weight: 800;
+      line-height: 34px;
+      max-width: 400px;
+      padding: 0 180px;
+      transition: padding 0.5s ease-in-out;
+    }
+
+    h3 {
       font-family: Muli;
-      font-size: 24px;
+      font-size: 20px;
       font-weight: 800;
       line-height: 30px;
       max-width: 400px;
@@ -390,7 +419,7 @@ body {
       font-size: 16px;
       font-weight: 400;
       line-height: 26px;
-      max-width: 475px;
+      max-width: 600px;
       padding: 0 180px;
       transition: padding 0.5s ease-in-out;
     }
@@ -403,22 +432,30 @@ body {
       max-width: 475px;
       padding: 0 180px;
       transition: padding 0.5s ease-in-out;
+
+      &.sub {
+        font-size: 14px;
+        line-height: 20px;
+      }
     }
 
     @media (max-width: breakpoint(large)) {
       h2 { padding: 0 20px; }
+      h3 { padding: 0 20px; }
       ul { padding: 0 20px; }
       p { padding: 0 20px; }
     }
 
     @media (max-width: 820px) {
       h2 { max-width: 90%; }
+      h3 { max-width: 90%; }
       ul { max-width: 90%; }
       p { max-width: 90%; }
     }
 
     @media (max-width: breakpoint(small)) {
       h2 { padding: 0; font-size: 20px; }
+      h3 { padding: 0; font-size: 20px; }
       ul { padding: 0; font-size: 20px; }
       p { padding: 0; font-size: 16px; }
     }
@@ -512,7 +549,7 @@ body {
 
   .node-5 {
     width: 93px;
-    top: -200px;
+    top: -150px;
     left: 0;
 
     @media (max-width: 920px) {
@@ -522,7 +559,7 @@ body {
 
   .node-6 {
     width: 120px;
-    top: -100px;
+    top: -90px;
     right: 80px;
 
     @media (max-width: 920px) {
