--- a/cal-hacks/assets/style.css
+++ b/cal-hacks/assets/style.css
@@ -9,13 +9,15 @@ body {
   margin: 0;
   display: flex;
   justify-content: center;
-  color: #0D739D;
+  color: #3B9BC2;
   background: #A8D9F1;
   font-family: Muli;
   overflow-x: hidden;
   font-weight: 400; }
+  body p {
+    color: #0D739D; }
   body a:link, body a:hover, body a:visited, body a:focus {
-    color: #0D739D;
+    color: #3B9BC2;
     text-decoration: none;
     outline: 0;
     background: transparent;
@@ -79,12 +81,14 @@ body {
         display: inline-block;
         font-size: 16px;
         font-weight: 800;
-        color: #0D739D;
+        color: #3B9BC2;
         line-height: 32px;
         padding: 0 12px;
         border-radius: 4px;
         cursor: pointer;
-        transition: background 0.2s ease-in-out; }
+        transition: background 0.2s ease-in-out;
+        font-family: Nunito Sans;
+        font-weight: 600; }
         body .header .nav .nav-item:hover {
           background: #80C8DF;
           color: #0D739D; }
@@ -99,16 +103,18 @@ body {
         body .header .nav .nav-item.apply {
           font-size: 16px;
           line-height: 36px;
-          background: #0D739D;
+          background: #3B9BC2;
           color: #A8D9F1;
           border-radius: 4px;
           padding: 0 30px;
-          margin: 0 0 0 15px; }
+          margin: 0 0 0 15px;
+          font-family: Nunito Sans;
+          font-weight: 600; }
           @media (max-width: 800px) {
             body .header .nav .nav-item.apply {
               display: none; } }
           body .header .nav .nav-item.apply:hover {
-            background: #3B9BC2;
+            background: #0D739D;
             color: #97D0ED; }
       body .header .nav .icon {
         font-size: 28px;
@@ -139,10 +145,12 @@ body {
       display: block;
       font-size: 16px;
       font-weight: 600;
-      color: #0D739D;
+      color: #3B9BC2;
       width: 100vw;
       padding: 20px 0;
-      text-align: center; }
+      text-align: center;
+      font-family: Nunito Sans;
+      font-weight: 600; }
       body .mobile-nav .mobile-nav-item:hover {
         font-weight: 800; }
   body .container {
@@ -247,7 +255,9 @@ body {
         font-size: 24px;
         margin: 10px 0 0 40px;
         font-weight: 600;
-        padding: 0; }
+        padding: 0;
+        font-family: Nunito Sans;
+        font-weight: 600; }
       body .container .title .apply {
         display: inline-block;
         font-family: Nunito Sans;
@@ -258,13 +268,13 @@ body {
         font-size: 24px;
         color: #A8D9F1;
         line-height: 46px;
-        background: #0D739D;
+        background: #3B9BC2;
         border-radius: 4px;
         margin: 20px 0 0 80px;
         cursor: pointer;
         transition: 0.2s ease-in-out; }
         body .container .title .apply:hover {
-          background: #3B9BC2;
+          background: #0D739D;
           color: #97D0ED; }
       @media (max-width: 920px) {
         body .container .title {
@@ -275,7 +285,7 @@ body {
             margin: 20px 0 0 0; } }
       @media (max-width: 820px) {
         body .container .title {
-          margin-top: 30px; } }
+          margin-top: 40px; } }
       @media (max-width: 500px) {
         body .container .title {
           margin-left: 0; }
@@ -302,7 +312,7 @@ body {
       padding: 0 180px;
       transition: padding 0.5s ease-in-out; }
     body .container h3 {
-      font-family: Muli;
+      font-family: Nunito Sans;
       font-size: 20px;
       font-weight: 800;
       line-height: 30px;
@@ -352,7 +362,7 @@ body {
         font-size: 20px; }
       body .container h3 {
         padding: 0;
-        font-size: 20px; }
+        font-size: 18px; }
       body .container ul {
         padding: 0;
         font-size: 20px; }
@@ -563,7 +573,7 @@ body {
         font-weight: 800;
         display: inline-block;
         border-bottom: 3px solid #EDF6FA;
-        color: #0D739D;
+        color: #3B9BC2;
         font-size: 18px; }
       body .faq-content .faq-item .answer {
         font-weight: 400;
@@ -606,7 +616,7 @@ body {
       body .footer .links .link-item {
         font-size: 16px;
         font-weight: 800;
-        color: #0D739D;
+        color: #3B9BC2;
         line-height: 32px;
         padding: 0 4px;
         border-radius: 4px;
